--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "bootstrap": "^5.3.6",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.1.0",
@@ -20,8 +23,7 @@
     "react-parallax-tilt": "^1.7.295",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.6.0",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "typewriter-effect": "^2.22.0",
     "web-vitals": "^5.0.1"
   },
